--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Ritual
 #logo
 description: The Creative Company
 #show_download: true
-theme: jekyll-theme-chirpy
+theme: jekyll-theme-minimal
